packages/cashc/test/compiler/ParseError/array_parameter.cash
contract Test(int x, string y) {
    return {
        hello(int[] a) {
        },

        world(int a) {
        }
    }
}
